kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: ghcr.io/abrachos/virtualaccount:latest
        ports:
        - containerPort: 5034
      imagePullSecrets:
      - name: ghcr-secret
