kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5034
  selector:
    app: flask
